--- a/index.html
+++ b/index.html
@@ -3,22 +3,29 @@
     <head>
         <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
     </head>
-    <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
+    <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
     <script src="https://raw.githack.com/jeromeetienne/AR.js/master/aframe/build/aframe-ar.min.js"></script>
     <script src="https://raw.githack.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
-    <script src="./events.js"></script>
+    <script src="https://unpkg.com/aframe-chromakey-material/dist/aframe-chromakey-material.min.js"></script>
+
+    <script src="./script.js"></script>
 
     <body style='margin : 0px; overflow: hidden;'>
         <a-scene vr-mode-ui="enabled: false" markerhandler embedded arjs='sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;'>
 
-        <a-marker type='barcode' value='https://ar.hitotech.net'>
+        <a-marker type='barcode' value='7'>
             <a-video
+                id="greenscreenvideo"
+                width="9" 
+                height="5"
                 src="./video.mp4"
-                smooth="true" smoothCount="5" smoothTolerance="0.01" smoothThreshold="2"
-                scale="5"
-                rotation="-90 -0 0"
+                smooth="true" smoothCount="2" smoothTolerance="0.09" smoothThreshold="2"
+                rotation="-30 0 0"
                 >
             </a-video>
+
+            <a-entity material="shader: chromakey; src: #greenscreenvideo; color: 1 1 1" geometry="primitive: plane"  position = "0 2 -2" ></a-entity>
+
         </a-marker>
 
         <a-entity camera></a-entity>
