--- a/index.html
+++ b/index.html
@@ -1,34 +1,124 @@
-<!doctype HTML>
+<!DOCTYPE html>
 <html>
-    <head>
-        <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-    </head>
-    <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
-    <script src="https://raw.githack.com/jeromeetienne/AR.js/master/aframe/build/aframe-ar.min.js"></script>
-    <script src="https://raw.githack.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
-    <script src="https://unpkg.com/aframe-chromakey-material/dist/aframe-chromakey-material.min.js"></script>
+<head>
+<title>BRS</title>
+<style>
+ body {
+   text-align: center;
+ }
 
-    <script src="./script.js"></script>
-
-    <body style='margin : 0px; overflow: hidden;'>
-        <a-scene vr-mode-ui="enabled: false" markerhandler embedded arjs='sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;'>
-
-        <a-marker type='barcode' value='7'>
-            <a-entity material="shader: chromakey; src: #greenscreenvideo; color: 1 1 1" geometry="primitive: plane"  position = "0 2 -2" ></a-entity>
-            <a-video
-                id="greenscreenvideo"
-                width="9" 
-                height="5"
-                src="./video.mp4"
-                smooth="true" smoothCount="2" smoothTolerance="0.5" smoothThreshold="2"
-                rotation="-90 0 0"
-                >
-            </a-video>
+ img {
+   display: block;
+   margin: 0 auto;
+ }
 
 
-        </a-marker>
+ h1 {
+   font-size: 36px;
+   font-weight: bold;
+ }
 
-        <a-entity camera></a-entity>
-        </a-scene>
-    </body>
+ h2 {
+   font-size: 24px;
+   font-weight: normal;
+ }
+
+body {
+text-align: center;
+background-color: #ed018c;
+}
+
+img:not(:first-child) {
+display: block;
+margin: 0 auto;
+transition: all 0.3s ease-in-out;
+width: 50%;
+}
+
+img:not(:first-child):hover {
+box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+h1 {
+font-size: 36px;
+font-weight: bold;
+}
+
+h2 {
+font-size: 24px;
+font-weight: normal;
+}
+
+footer {
+background-color: #333;
+color: #fff;
+padding: 10px;
+}
+
+footer a {
+color: #fff;
+text-decoration: none;
+}
+
+.btn {
+ position: relative;
+ font-size: 17px;
+ text-transform: uppercase;
+ text-decoration: none;
+ padding: 1em 2.5em;
+ display: inline-block;
+ border-radius: 6em;
+ transition: all .2s;
+ border: none;
+ font-family: inherit;
+ font-weight: 500;
+ color: black;
+ background-color: white;
+}
+
+.btn:hover {
+ transform: translateY(-3px);
+ box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+}
+
+.btn:active {
+ transform: translateY(-1px);
+ box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+}
+
+.btn::after {
+ content: "";
+ display: inline-block;
+ height: 100%;
+ width: 100%;
+ border-radius: 100px;
+ position: absolute;
+ top: 0;
+ left: 0;
+ z-index: -1;
+ transition: all .4s;
+}
+
+.btn::after {
+ background-color: #fff;
+}
+
+.btn:hover::after {
+ transform: scaleX(1.4) scaleY(1.6);
+ opacity: 0;
+}
+</style>
+</head>
+<body>
+<img src="https://scontent.fhyd5-1.fna.fbcdn.net/v/t39.30808-1/397292246_897684861715973_6000578404676595833_n.jpg?stp=dst-jpg_p200x200&_nc_cat=1&ccb=1-7&_nc_sid=5f2048&_nc_ohc=Tnx906cQKo8AX9rdHqg&_nc_ht=scontent.fhyd5-1.fna&oh=00_AfDRZWYf4XZAdGtIYlSCbg3aL1wABvLcXfOHtAtBNLHJtA&oe=6548F49D" alt="BRS logo" style="height: 7rem; width: auto;">
+<h1 style="color: #fff;">Bharatiya Rashtra Samiti</h1>
+<img src="MRR.png" alt="Marri Rajashekar Reddy" style="height: 25rem; width: auto;" >
+<h2 style="color: #fff;">Marri Rajashekar Reddy</h2>
+<h3 style="color: #fff;">మల్కాజిగిరి నియోజకవర్గ BRS అభ్యర్థి
+</h3>
+<button class="btn" onclick="location.href='ar.html' "> Button
+</button>
+
+
+</body>
 </html>
